--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,17 @@
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
 }
+
+#map-container {
+  position: relative; 
+  width: 100%; 
+  height: 100%;
+}
+
+// The map needs an explicit height when mobile responsive
+// 769px is bulma's is-tablet breakpoint
+@media only screen and (max-width: 769px) {
+  #map-container{
+    height: 300px;
+  }
+}
